# Ryd-gate-modeling

./: .coverage  .gitignore  CHANGELOG.md  Plan.md  Plan_stage1.md  README.md  Rydberg_sim.tex  main.tex  pyproject.toml  updatealg.tex
.github/workflows/: docs.yml
app/: rydberg_desktop.py
app/pages/: 1_gate_simulator.py  2_lattice_simulator.py  3_error_analysis.py  4_local_addressing.py  5_energy_levels.py
data/: ar_opt_lukin.json  ar_opt_our.json  ar_opt_our_search_best.json  ar_opt_our_w0.json  ar_opt_our_w15.json  ar_opt_our_w21.json  ar_opt_our_w23.json  ar_opt_our_w24.json  ar_opt_our_w26.json  ar_opt_our_w4.json  ar_opt_our_w6.json  ar_opt_our_w8.json  det_dark.json
docs/: _quarto.yml  api.rst  architecture.md  capability_matrix.md  capability_matrix.qmd  coarsen.tex  digital-analog_sim.md  error_budget_methodology.md  fundamentals.md  fundamentals.qmd  getting_started.md  getting_started.qmd  hamiltonians.qmd  how_to_gates.md  how_to_gates.qmd  how_to_interop.md  how_to_noise.md  how_to_noise.qmd  how_to_sequences.md  index.qmd  index.rst  lattice_demo.py  local_addressing.tex  local_addressing_sim.qmd  plan.md  schrodinger_solver.md  stage1_api.md  validation.md
docs/_scripts/: build_capability_matrix.py  run_notebooks.py
examples/: README.md  demo_cz_gate_report.py  demo_local_addressing.py  demo_local_addressing_tn.py  demo_noise_model.py  demo_pulser_interop.py  demo_sequence_exact.py
julia/itensors/: run_tnqs_2d_bp.jl
results/: addressing_1q_grid.csv  addressing_opt_grid.csv  diagnose_exp2_slow_sweep.csv  diagnose_exp3_boundary.csv  exp1_addressing_opt_grid.csv  exp2_addressing_opt_grid.csv  exp3_addressing_opt_grid.csv  exp4_addressing_opt_grid.csv  exp5_addressing_opt_grid.csv  quench_benchmark_rerun_20260607_043304.csv  quench_benchmark_rerun_20260607_043304.json  tfim_gc_20260609_102344.csv  tfim_gc_20260609_102344.json
scripts/: addressing_enlevel.py  api_walkthrough.py  bench_quench_check.py  demo.ipynb  demo_local_addressing.py  demo_local_addressing_tn.py  diagnose_adiabaticity.py  diagnose_ar_target.py  draft.py  draft2.py  error_budget_sweep.py  error_budget_table.py  error_deterministic.py  error_monte_carlo.py  generate_mc_data.py  generate_si_tables.py  opt_dark.py  optimize_ar_cz.py  peps_10x10_results.npz  plot_ac_stark_landscape.py  plot_mid_pop.py  plot_population_evolution_sch.py  reoptimize_explicit.py  run_15x15_anneal.py  run_3level_lattice.py  run_addressing_sim.py  run_anneal_batch.py  run_ar_search.sh  run_cz_simulation.py  run_local_sweep.py  run_peps_10x10.py  run_route2_lattice_cell.py  scan_local_addressing.py  scan_local_addressing_singlequbit.py  sensitivity_gaussian_iso.py  system_builders.py  verify_cz_dark.py
scripts/notebooks/: 01_cz_gate.ipynb  01_cz_gate_validation_and_errors.ipynb  01r_lattice_dynamics.ipynb  01r_pepskit_quench.ipynb  01r_plus_quench_benchmark.ipynb  01r_saffman_double_arp_exact.ipynb  01r_tfim_critical_field.ipynb  01r_yastn_peps_convergence.ipynb  02_ac_stark_addressing.ipynb  02_ac_stark_local_addressing.ipynb  03_lattice_dynamics_and_annealing.ipynb  03_lattice_dynamics_annealing.ipynb  04_quench_and_state_prep.ipynb  05_tn_and_error_budget.ipynb  _build_nb.py  cz_gate_validation_and_errors.ipynb  error_buget.ipynb  find_phase.ipynb  plus_state_preparation.ipynb  reproduce_main_ttn.ipynb  run_quench_benchmark.ipynb
src/exact/: __init__.py  dense_ode.py  monte_carlo_runner.py  simulate.py  sparse_expm.py
src/gputn/: __init__.py  backend.py  compiler.py  rydberg_engine.py
src/itensor/: __init__.py  backend.py  compiler.py
src/nqs/: __init__.py  compiler.py
src/peps2d/: __init__.py  compiler.py
src/ryd_gate/: __init__.py  devices.py  discretize.py  gates.py  ideal_cz.py  interop.py  ir.py  lattice.py  noise.py  observables.py  physics.py  pulse.py  results.py  sequence.py  simulate.py
src/tenpy_mps/: __init__.py  backends.py  compiler.py  model.py  observables.py  sites.py  state.py
src/tn_common/: __init__.py  compiler.py  external_backends.py  simulate.py  sites.py
src/ttn/: __init__.py  backend.py  compiler.py
stageplans/: README.md  StagePlan_01_API_Foundation.md  StagePlan_02_Sequence_Exact_Result.md  StagePlan_03_Backend_Native_Result_Handles.md  StagePlan_04_NoiseModel.md  StagePlan_05_Gate_Library_and_Error_Budgets.md  StagePlan_06_Serialization_Pulser_Interop.md  StagePlan_07_Docs_Examples_Packaging.md  StagePlan_08_Convergence.md
tests/: conftest.py  test_blackman.py  test_coarsening.py  test_compiler.py  test_core_abstractions.py  test_cz_gate_phase.py  test_digital_analog_site_profiles.py  test_ideal_cz.py  test_init.py  test_lattice3.py  test_lattice_dynamics_protocols.py  test_lattice_system.py  test_local_addressing.py  test_local_sweep.py  test_phase6.py  test_protocol_channels.py  test_rydberg_system_model.py  test_solver_backends.py  test_system_models.py  test_tn_dmrg.py  test_tn_external_backends.py  test_tn_gputn_backend.py  test_tn_itensors_bridge.py  test_tn_lattice_spec.py  test_tn_tdvp.py  test_tn_tnqs_bridge.py
tests/analysis/: test_addressing.py  test_coarsening.py  test_spin_symmetry_analysis.py
tests/backends/: test_mps_result_handle.py  test_nqs_netket_backend.py  test_pepskit_ipeps.py  test_plus_init.py  test_tn_analog3.py  test_tn_dmrg.py  test_tn_external_backends.py  test_tn_gputn_backend.py  test_tn_gputtn_backend.py  test_tn_itensors_bridge.py  test_tn_lattice_spec.py  test_tn_rydtn_boundary.py  test_tn_rydtn_convergence_gpu.py  test_tn_rydtn_core.py  test_tn_rydtn_exact.py  test_tn_rydtn_gates.py  test_tn_rydtn_ground.py  test_tn_rydtn_ntu.py  test_tn_rydtn_peps_backend.py  test_tn_rydtn_yastn_parity.py  test_tn_tdvp.py  test_tn_tnqs_bridge.py  test_tn_yastn_peps_backend.py  test_tn_yastn_quimb_backends.py
tests/core/: test_api_characterization.py  test_blackman.py  test_core_abstractions.py  test_devices.py  test_evolution_result.py  test_init.py  test_level_structures_product_api.py  test_pulse_api.py  test_rydberg_system_model.py  test_serialization_roundtrip.py  test_simulate_entry.py  test_system_builder.py  test_validation.py
(+244 files in other folders)
