[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ryd-gate"
version = "0.1.0"
description = "Simulation and optimization of Rydberg-atom entangling gates"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Siyuan Chen"},
]
dependencies = [
    "numpy",
    "qutip",
    "scipy",
    "matplotlib",
    "arc-alkali-rydberg-calculator",
]

[project.optional-dependencies]
schema = [
    "jsonschema>=4",
]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "nbconvert",
    "nbclient",
    "ipykernel",
]
docs = [
    "quartodoc>=0.7",
    "griffe>=1.0,<2.0",
]
tn = [
    "physics-tenpy>=1.0",
]
tn-2d = [
    "physics-tenpy>=1.0",
    "cotengra",
    "autoray",
]
# YASTN is only needed to cross-validate the self-written `rydtn` PEPS engine
# (backend="peps" defaults to engine_package="rydtn"; "yastn" is the reference).
tn-2d-validation = [
    "yastn @ git+https://github.com/yastn/yastn.git",
]
gputn-cu12 = [
    "cupy-cuda12x[ctk]>=13.0",
    # V100 / sm_70 compatible cuQuantum 25.03 stack.
    "cuquantum-python-cu12==25.3.0.post0",
    "cutensornet-cu12==2.7.0",
    "custatevec-cu12==1.8.0",
    "cudensitymat-cu12==0.1.0",
    "cutensor-cu12==2.2.0",
]
# torch for the rydtn PEPS-on-CUDA tensor backend (backend_name="torch", device="cuda").
# Pinned to 2.5.1 because newer wheels (>=2.8 / cu130) drop Volta (sm_70) and fail on the
# DGX V100s with "no kernel image available". uv pulls 2.5.1+cu121 from the PyTorch index
# (see [tool.uv.sources]); plain-pip users get PyPI 2.5.1 (cu124), which also still ships sm_70.
# Opt-in only (kept out of `dependencies`/`dev` so CI and non-CUDA installs don't pull it):
#   uv sync --extra dev --extra tn --extra tn-2d --extra torch
torch = [
    "torch==2.5.1",
]

[[tool.uv.index]]
# explicit=true => this index is consulted ONLY for packages mapped in [tool.uv.sources],
# so everything except torch still resolves from PyPI.
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ryd_gate = ["schemas/*.json", "py.typed"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_implicit_optional = false
# Stage 7 ratchet: the product surface is type-checked; kernel/backend
# internals are excluded by name (not blanket) until annotated.

[[tool.mypy.overrides]]
module = [
    "ryd_gate.core.*",
    "ryd_gate.ir.*",
    "ryd_gate.backends.*",
    "ryd_gate.protocols.*",
    "ryd_gate.analysis.*",
    "ryd_gate.physics.*",
    "ryd_gate.simulate",
]
ignore_errors = true

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line too long (research code has long expressions)
    "E741",   # ambiguous variable name (physics uses I, l, etc.)
    "F403",   # star imports (arc, qutip use this pattern)
    "F405",   # may be undefined from star import
    "W291",   # trailing whitespace
    "W293",   # blank line whitespace
    "E731",   # lambda assignment
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
